--- a/project.json
+++ b/project.json
@@ -1,135 +1,98 @@
 {
-	"description" : "Inject these radiant signals into your desktop.\nWith such a massive conveyance of data, rectification may be necessary.\nAre you an RGB lover?",
+	"contentrating" : "Everyone",
+	"description" : "Observe your desktop as these irradiant shards emerge from the abysm.",
 	"file" : "index.html",
 	"general" : 
 	{
 		"properties" : 
 		{
-			"activity" : 
-			{
-				"max" : 20,
-				"min" : 1,
-				"order" : 2,
-				"text" : "Signal Activity",
-				"type" : "slider",
-				"value" : 10
-			},
 			"colorset" : 
 			{
 				"options" : 
 				[
 					{
-						"label" : "RGB Lover (Cycle)",
+						"label" : "Automatic Cycle",
 						"value" : 1
 					},
 					{
-						"label" : "Scarlet Exception",
+						"label" : "Fixed Color",
 						"value" : 2
-					},
-					{
-						"label" : "Emerald Matrix",
-						"value" : 3
-					},
-					{
-						"label" : "Ultraviolet",
-						"value" : 4
-					},
-					{
-						"label" : "Amber Terminal",
-						"value" : 5
-					},
-					{
-						"label" : "Icicle Grid",
-						"value" : 6
-					},
-					{
-						"label" : "Fuchsia",
-						"value" : 7
-					},
-					{
-						"label" : "Virus",
-						"value" : 8
-					},
-					{
-						"label" : "Cobalt",
-						"value" : 9
-					},
-					{
-						"label" : "Ashen",
-						"value" : 10
-					},
-					{
-						"label" : "Shadow",
-						"value" : 11
-					},
-					{
-						"label" : "Custom Settings",
-						"value" : 12
 					}
 				],
-				"order" : 4,
-				"text" : "Hue Preset",
+				"order" : 5,
+				"text" : "Color Mode",
 				"type" : "combo",
 				"value" : 1
 			},
 			"cyclespeed" : 
 			{
 				"condition" : "colorset.value==1",
-				"max" : 500,
+				"max" : 100,
 				"min" : 1,
-				"order" : 5,
-				"text" : "RGB Cycle Speed",
+				"order" : 6,
+				"text" : "Cycle Speed",
 				"type" : "slider",
-				"value" : 40
+				"value" : 5
 			},
-			"linecolor" : 
+			"cycleval" : 
 			{
-				"condition" : "colorset.value==12",
-				"order" : 5,
-				"text" : "Color",
-				"type" : "color",
-				"value" : "1.0 0.0 0.0"
+				"condition" : "colorset.value==2",
+				"max" : 359,
+				"min" : 0,
+				"order" : 7,
+				"text" : "Hue",
+				"type" : "slider",
+				"value" : 1
+			},
+			"irradiance" : 
+			{
+				"max" : 100,
+				"min" : 0,
+				"order" : 2,
+				"text" : "Irradiance",
+				"type" : "slider",
+				"value" : 50
 			},
 			"linecount" : 
 			{
-				"max" : 1500,
+				"max" : 1200,
 				"min" : 100,
 				"order" : 1,
-				"text" : "Signal Instances",
+				"text" : "Shards",
 				"type" : "slider",
-				"value" : 500
+				"value" : 800
+			},
+			"movespeed" : 
+			{
+				"max" : 100,
+				"min" : 1,
+				"order" : 3,
+				"text" : "Speed",
+				"type" : "slider",
+				"value" : 15
 			},
 			"pixelsize" : 
 			{
 				"max" : 4,
 				"min" : 1,
-				"order" : 3,
-				"text" : "Pixel Size",
+				"order" : 4,
+				"text" : "Magnification",
 				"type" : "slider",
 				"value" : 1
 			},
 			"schemecolor" : 
 			{
-				"order" : 20,
+				"order" : 8,
 				"text" : "ui_browse_properties_scheme_color",
 				"type" : "color",
-				"value" : "0 0 0"
-			},
-			"tint" : 
-			{
-				"condition" : "colorset.value==12",
-				"max" : 10,
-				"min" : 0,
-				"order" : 6,
-				"text" : "Tint",
-				"type" : "slider",
-				"value" : 3
+				"value" : "0.06666666666666667 0.06666666666666667 0.06666666666666667"
 			}
 		}
 	},
 	"preview" : "preview.gif",
 	"tags" : [ "Abstract" ],
-	"title" : "Erratic Signals",
+	"title" : "Irradiant Shards",
 	"type" : "web",
-	"visibility" : "public"
+	"visibility" : "public",
+	"workshopid" : 1318400935
 }
